--- a/interface/src/componentsStyling/stake.scss
+++ b/interface/src/componentsStyling/stake.scss
@@ -184,7 +184,7 @@
         border-radius: 25px;
     }
     .cards-grid {
-        height: 69vh;
+        height: 57vh;
         overflow-y: scroll;
         overflow-x: hidden;
     }
